--- a/source/ui/src/main/resources/templates/fragments/layout.html
+++ b/source/ui/src/main/resources/templates/fragments/layout.html
@@ -27,6 +27,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a id="menu-home" class="nav-link active" aria-current="page" href="/home">Home</a></li>
                         <li class="nav-item"><a id="menu-catalog" class="nav-link" href="/catalog">Catalog</a></li>
+                        <li class="nav-item"><a id="menu-orders" class="nav-link" href="/orders">Orders</a></li>
                     </ul>
                     <a id="go-cart" class="btn btn-outline-dark" href="/cart">
                         <i class="bi-cart-fill me-1"></i>
